objects/Program_HD__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Travel_HD__c</fullName>
        <description>Enter the associated Travel costs incurred - at the Program level - for Hardwick Day advisors</description>
        <inlineHelpText>Enter the associated Travel costs incurred - at the Program level - for Hardwick Day advisors</inlineHelpText>
        <label>Billable Travel (HD)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_HD__c</fullName>
        <label>Campaign (HD)</label>
        <picklist>
            <picklistValues>
                <fullName>Discount (HD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Price Calculator (HD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimization (HD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (HD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Quantity_HD__c</fullName>
        <label>Contact Quantity (HD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_HD__c</fullName>
        <label>Contract Sent (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signature_Date_HD__c</fullName>
        <label>Contract Signature Date (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_Date_HD__c</fullName>
        <label>Declined Date (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Value_HD__c</fullName>
        <formula>Program_Cost_HD__c * Probability_HD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Value (HD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_HD__c</fullName>
        <formula>Program_Package_HD__r.Fiscal_Year_HD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year (HD)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_the_Record_HD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock the Record (HD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_year_Contract_HD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-year Contract (HD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_HD__c</fullName>
        <label>Notes (HD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Deployment_Date_HD__c</fullName>
        <label>Planned Deployment Date (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Shutdown_Date_HD__c</fullName>
        <label>Planned Shutdown Date (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postage_Cost_HD__c</fullName>
        <label>Postage Cost (HD)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability_HD__c</fullName>
        <label>Probability (HD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probable_Revenue_HD__c</fullName>
        <formula>Program_Cost_HD__c * Probability_HD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probable Revenue (HD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Cost_HD__c</fullName>
        <label>Program Cost (HD)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Package_HD__c</fullName>
        <label>Program Package (Hardwick Day)</label>
        <referenceTo>Program_Package_Hardwick_Day__c</referenceTo>
        <relationshipLabel>Programs (HD)</relationshipLabel>
        <relationshipName>Programs_HD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent_HD__c</fullName>
        <label>Proposal Sent (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature_Type_HD__c</fullName>
        <description>How did the client commit to engagement on this campaign?</description>
        <label>Signature Type (HD)</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - Royall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_HD__c</fullName>
        <label>Status (HD)</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience_HD_del__c</fullName>
        <label>Target Audience (HD)</label>
        <picklist>
            <controllingField>Campaign_HD__c</controllingField>
            <picklistValues>
                <fullName>Financial Aid Clients</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Deployment_HD__c</fullName>
        <label>Target Deployment (HD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_HD__c</fullName>
        <description>Type of Program client engagement</description>
        <inlineHelpText>Type of Program client engagement</inlineHelpText>
        <label>Type (HD)</label>
        <picklist>
            <picklistValues>
                <fullName>Re-engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up-sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Business transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final invoice adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Program (Hardwick Day)</label>
    <nameField>
        <label>Job Number (HD)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs (HD)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_the_Record_HD</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	$Profile.Name != &apos;System Administrator&apos;, 
	AND( 
	    Lock_the_Record_HD__c, 
	    NOT(ISCHANGED(Lock_the_Record_HD__c)) 
	)
)</errorConditionFormula>
        <errorMessage>This Record is locked and cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_HD_Status_IS_Contracted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status_HD__c ,&quot;Contracted&quot;),
OR(
ISBLANK(Contract_Sent_HD__c),
ISBLANK(Proposal_Sent_HD__c),
ISBLANK(Contract_Signature_Date_HD__c)
)
)</errorConditionFormula>
        <errorMessage>Once a client has signed contract and is subsequently marked as &quot;Contracted&quot; in Status (HD), you must fill out the corresponding date/s.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_HD_Status_IS_Declined</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status_HD__c ,&quot;Declined&quot;),
OR(
ISBLANK( Declined_Date_HD__c ),
ISBLANK( Proposal_Sent_HD__c )
)
)</errorConditionFormula>
        <errorMessage>When Program &apos;Status (HD)&apos; EQUALS &quot;Declined&quot;, both the &apos;Declined Date (HD)&apos; and &apos;Proposal Sent (HD)&apos; dates are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_field_validation</fullName>
        <active>true</active>
        <description>Only those individuals with “invoicing access” are able to change to the value to “Contracted” and “Pending Signature”. Contact Accounting to make this update.</description>
        <errorConditionFormula>ISCHANGED(Status_HD__c) &amp;&amp; ISPICKVAL(Status_HD__c, &quot;Contracted&quot;) &amp;&amp;ISPICKVAL(Status_HD__c,&quot;Pending Signature &quot;) &amp;&amp; !$Permission.Invoicing_access</errorConditionFormula>
        <errorDisplayField>Status_HD__c</errorDisplayField>
        <errorMessage>Only those individuals with “invoicing access” are able to change to the value to “Contracted” and “Pending Signature”. Contact Accounting to make this update</errorMessage>
    </validationRules>
</CustomObject>